tests/spec/emit/snapshots/match_guard_pins_mutated_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) -> int {
    let mut current = opt
    let clear = || -> bool { current = None; true }
    match current {
      Some(x) if clear() => x,
      Some(_) => 1,
      None => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) int {
	current := opt
	clear_ := func() bool {
		current = lisette.MakeOptionNone[int]()
		return true
	}
	subject := current
	if subject.Tag == lisette.OptionSome {
		x := subject.SomeVal
		if clear_() {
			return x
		}
		return 1
	}
	return 0
}
