tests/spec/emit/snapshots/match_guard_pins_shadowed_mutated_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) -> int {
    let current = opt
    let mut current = current
    let clear = || -> bool { current = None; false }
    match current {
      Some(x) if clear() => x,
      Some(y) => y,
      None => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) int {
	current := opt
	current_1 := current
	clear_ := func() bool {
		current_1 = lisette.MakeOptionNone[int]()
		return false
	}
	subject := current_1
	if subject.Tag == lisette.OptionSome {
		{
			x := subject.SomeVal
			if clear_() {
				return x
			}
		}
		return subject.SomeVal
	}
	return 0
}
