tests/spec/emit/snapshots/match_guard_struct_literal.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct Point { x: int, y: int }
  
  fn main() {
    let p = Point { x: 1, y: 2 }
    match p {
      _ if p == Point { x: 1, y: 2 } => { let _ = 1 },
      _ => { let _ = 2 },
    }
  }
---
package main

type Point struct {
	x int
	y int
}

func main() {
	p := Point{
		x: 1,
		y: 2,
	}
match:
	for {
		if p == (Point{
			x: 1,
			y: 2,
		}) {
			break match
		}
		{
			break match
		}
	}
}
