tests/spec/emit/snapshots/match_guard_switch_fallback_value_position.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum Dir { North, South }
  
  fn check(d: Dir, urgent: bool) -> string {
    match d {
      Dir.North if urgent => "NORTH!",
      Dir.North => "north",
      Dir.South => "south",
    }
  }
---
package main

func MakeDirNorth() Dir {
	return Dir{Tag: DirNorth}
}

func MakeDirSouth() Dir {
	return Dir{Tag: DirSouth}
}

type DirTag int

const (
	DirNorth DirTag = iota
	DirSouth
)

type Dir struct {
	Tag DirTag
}

func check(d Dir, urgent bool) string {
	if d.Tag == DirNorth {
		if urgent {
			return "NORTH!"
		}
		return "north"
	}
	return "south"
}
