tests/spec/emit/snapshots/match_guard_tuple.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(pair: (int, int)) -> string {
    match pair {
      (x, y) if x == y => "equal",
      (x, y) if x > y => "greater",
      _ => "less",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(pair lisette.Tuple2[int, int]) string {
	{
		x := pair.First
		y := pair.Second
		if x == y {
			return "equal"
		}
	}
	{
		if pair.First > pair.Second {
			return "greater"
		}
	}
	{
		return "less"
	}
}
