tests/spec/emit/snapshots/match_guard_with_integer_literal_and_catchall.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    for i in 0..10 {
      match i {
        d if d < 5 => fmt.Println("low"),
        5 =>          fmt.Println("five"),
        d =>          fmt.Println("high"),
      }
    }
  }
---
package main

import "fmt"

func main() {
	for i := 0; i < 10; i++ {
	match_1:
		for {
			{
				if i < 5 {
					fmt.Println("low")
					break match_1
				}
			}
			if i == 5 {
				fmt.Println("five")
			} else {
				fmt.Println("high")
			}
			break match_1
		}
	}
}
