tests/spec/emit/snapshots/match_guard_with_or_pattern_bindings.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum E { A(int), B(int), C(int) }
  
  fn test(e: E) -> int {
    match e {
      C(x) if x > 0 => x * 100,
      A(x) | B(x) | C(x) => x,
    }
  }
---
package main

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC(arg0 int) E {
	return E{Tag: EC, C: arg0}
}

type ETag uint8

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   int
	B   int
	C   int
}

func test(e E) int {
	if e.Tag == EC {
		x := e.C
		if x > 0 {
			return x * 100
		}
	}
	if e.Tag == EA {
		return e.A
	}
	if e.Tag == EB {
		return e.B
	}
	return e.C
}
