tests/spec/emit/snapshots/match_guarded_catchall_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn mk() -> P { P { v: 1 } }
  
  fn test() {
    match mk() {
      P { v: _ } if false => (),
      _ => (),
    }
  }
---
package main

type P struct {
	v int
}

func mk() P {
	return P{v: 1}
}

func test() {
	_ = mk()
	switch {
	case false:
	}
}
