tests/spec/emit/snapshots/match_guarded_ident_subject_unused.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn test() {
    let p = P { v: 1 }
    match p {
      P { v } if false => (),
      _ => (),
    }
  }
---
package main

type P struct {
	v int
}

func test() {
	p := P{v: 1}
	_ = p
match_1:
	for {
		{
			if false {
				break match_1
			}
		}
		{
			break match_1
		}
	}
}
